--- a/index.html
+++ b/index.html
@@ -56,21 +56,104 @@
 
 	</header>
     <main>
-	 <header><h3>A JavaScript project by YOUR NAME HERE</h3></header>
-	 <p>This page was taken from an HTML5 Flexible template that could be a good starting point for some of your projects.  The template file starts by setting a background color on the HTML element, and setting max-width on the body, which is styled like a wrapper.  The BODY element is also set to a percentage width so it leaves a bit of HTML color until it shrinks in size toward the mobile view.</p>
-	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
-	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
-	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	  <img src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible" />
+	 <header>
+		<h3>A JavaScript project by Edlawit Girma</h3>
+		<h3 id="greeting">Greeting goes here</h3>
+	</header>
+	 <p>This page demonestrates how to use JavaScript Date() object
+		to integrate information from the client's system clock into the web page. 
+		I added data to the page using methods such as document.getElementById().
+	 </p>
+	 <p>The web page uses JavaScript to determine the current hour, and presents a different image,
+		 greeting, and color based on the times of day.
+	</p>
+	<p>This page also produces a dynamic copyright using the JavaScript Date() object. Hence, it changes to the current year as the years go by. </p>
+	  <img id="pic" src="images/evening.jpg" alt="Time of Day Image" class="flexible" />
      <footer>
-      <p><small>&copy; 2022 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+      <p><small>&copy; 2021-<span id="copyright"></span> by 
+          Edlawit Girma, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
     </footer>
   </main>
  <script>
+
+	/*
+		We need a unique:
+		message
+		color
+		image
+		for each of the times of day
+
+		Morning (5am to 12 noon)
+		Afternoon (12 noon to 6pm)
+		Evening (6pm to 11pm)
+		Night (11pm to 5am)
+
+
+
+		
+		myDate = new Date();
+		myHour = myDate.getHours();
+
+		// REMOVE THE FOLLOWING LINE
+		myHour=16;
+
+		if(myHour<12){//morning
+		alert("Good Morning!");
+
+		}else{//afternoon
+
+		alert("Good Afternoon!");
+}
+	*/
+
+	
+    
+	let myDate = new Date();
+	let myCopyright = myDate.getFullYear();
+	let myHour = myDate.getHours();
+	let myGreeting="";
+	let myColor = "";
+	let myPic= "";
+	// alert(myHour);
+	// console.log(myHour);
+		// REMOVE THE FOLLOWING LINE - for testing only
+		myHour=30;
+
+	if(myHour>5 && myHour<12){//morning
+		//alert("Good Morning!");
+		myGreeting = "Good Morning!";
+		myColor = "orange";
+		myPic = "morning.jpg";
+	}else if(myHour>=12 && myHour<18){//afternoon
+		//alert("Good Afternoon!");
+		myGreeting = "Good Afternoon!";
+		myColor = "green";
+		myPic = "afternoon.jpg";
+	}else if(myHour>=18 && myHour<23){//evening
+		//alert("Good Evening!");
+		myGreeting = "Good Evening!";
+		myColor = "black";
+		myPic = "evening.jpg";
+	}else{//night
+		//alert("Good Night!");
+		myGreeting = "Good Night!"; 
+		myColor = "MidnightBlue";
+		myPic = "night.jpg";
+	}
+
+	// add images folder to myPic
+	myPic="images/" + myPic; 
+
+	document.getElementById("copyright"). innerHTML= myCopyright;
+	document.getElementById("greeting"). innerHTML= myGreeting;
+	document.querySelector("html").style.backgroundColor= myColor;
+	document.getElementById("pic"). src = myPic;
+
+
+
     //https://tinyurl.com/dynamic-html-checker
     document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
       
