--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 	let myPic= "";
 	// alert(myHour);
 	// console.log(myHour);
-		// REMOVE THE FOLLOWING LINE - for testing only
-		myHour=30;
+	// REMOVE THE FOLLOWING LINE - for testing only
+	//myHour=30;
 
 	if(myHour>5 && myHour<12){//morning
 		//alert("Good Morning!");
